--- a/2019云栖大会/README
+++ b/2019云栖大会/README
@@ -1,4 +1,4 @@
-is an annual tech meeting organised by Alibaba.
+APASARA Confernece is an annual tech summit organised by Alibaba.
 You can watch the VOD via this link https://yunqi.youku.com/2019/hangzhou/review
 If you're interested in Cloud Naitve topics, you can choose 9.26 am Docker Session and 9.27 am Cloud Native developer Session.
 You can find all upcoming events via official wechat account "阿里巴巴云原生" http://ww1.sinaimg.cn/large/7231c228ly1g6wjsf6eudj2076076dgb.jpg)
