--- a/Kubernetes Course/README
+++ b/Kubernetes Course/README
@@ -1,1 +1,2 @@
-https://edu.aliyun.com/roadmap/cloudnative
+If you prefer to watch the video 👉 https://edu.aliyun.com/roadmap/cloudnative
+If you prefer to read in text 👉 https://gitchat.csdn.net/column/5d68b823de93ed72d6eca1bc?utm_source=so
